--- a/clientapp/angular.json
+++ b/clientapp/angular.json
@@ -75,10 +75,10 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "clientapp:build:production"
+              "buildTarget": "clientapp:build:production"
             },
             "development": {
-              "browserTarget": "clientapp:build:development"
+              "buildTarget": "clientapp:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -86,7 +86,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "clientapp:build"
+            "buildTarget": "clientapp:build"
           }
         },
         "test": {
