Added luxon. Added chart.js. Added logic to create charts from an array of symbols. Added some styling. Other edits and updates.

--- a/clientapp/package.json
+++ b/clientapp/package.json
@@ -17,9 +17,14 @@
     "@angular/core": "^18.2.5",
     "@angular/forms": "^18.2.5",
     "@angular/material": "^18.2.5",
+    "@angular/material-luxon-adapter": "^18.2.7",
     "@angular/platform-browser": "^18.2.5",
     "@angular/platform-browser-dynamic": "^18.2.5",
     "@angular/router": "^18.2.5",
+    "@types/luxon": "^3.4.2",
+    "chart.js": "^4.4.4",
+    "luxon": "^3.5.0",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
